# ioi-network

./: .gitignore  README.md  codebase_snapshot.md  package-lock.json  package.json
apps/documentation/public/sources/kernel/crates/api/: Cargo.toml
apps/documentation/public/sources/kernel/crates/api/src/: lib.rs
apps/documentation/public/sources/kernel/crates/api/src/app/: mod.rs
apps/documentation/public/sources/kernel/crates/api/src/chain/: mod.rs
apps/documentation/public/sources/kernel/crates/api/src/commitment/: homomorphic.rs  identifiers.rs  mod.rs  scheme.rs
apps/documentation/public/sources/kernel/crates/api/src/component/: classification.rs  mod.rs
apps/documentation/public/sources/kernel/crates/api/src/config/: mod.rs
apps/documentation/public/sources/kernel/crates/api/src/consensus/: mod.rs
apps/documentation/public/sources/kernel/crates/api/src/crypto/: mod.rs
apps/documentation/public/sources/kernel/crates/api/src/error/: mod.rs
apps/documentation/public/sources/kernel/crates/api/src/homomorphic/: mod.rs  operations.rs  result.rs
apps/documentation/public/sources/kernel/crates/api/src/ibc/: mod.rs  zk.rs
apps/documentation/public/sources/kernel/crates/cli/: Cargo.toml
apps/documentation/public/sources/kernel/crates/cli/src/: lib.rs  main.rs  util.rs
apps/documentation/public/sources/kernel/crates/cli/tests/: adaptive_timing_e2e.rs  admft_e2e.rs  agent_budget_e2e.rs  agent_hybrid_e2e.rs  agent_mcp_e2e.rs  agent_pause_resume.rs  agent_rag_and_policy_e2e.rs  agent_resilience_e2e.rs  agent_scrub_e2e.rs  agent_swarm_e2e.rs  agent_trace_e2e.rs  agentic_e2e.rs  benchmark_throughput.rs  container_e2e.rs  dynamic_verifier_e2e.rs  ghost_mode_e2e.rs  governance_e2e.rs  ibc_e2e.rs  ibc_golden_e2e.rs  ibc_relayer_e2e.rs  ibc_zk_e2e.rs  infra_e2e.rs  module_upgrade_e2e.rs  policy_synthesis_e2e.rs  pqc_migration_e2e.rs  proof_verification_e2e.rs  scrubber_e2e.rs  security_e2e.rs  state_iavl_e2e.rs  state_jellyfish_e2e.rs  state_verkle_e2e.rs  sync_e2e.rs  t_timestamp_coherence.rs  workload_control_e2e.rs
apps/documentation/public/sources/kernel/crates/client/: Cargo.toml
apps/documentation/public/sources/kernel/crates/client/src/: lib.rs  security.rs  shmem.rs  slicing.rs
apps/documentation/public/sources/kernel/crates/consensus/: Cargo.toml
apps/documentation/public/sources/kernel/crates/consensus/src/: admft.rs  lib.rs  service.rs  util.rs
apps/documentation/public/sources/kernel/crates/crypto/: Cargo.toml
apps/documentation/public/sources/kernel/crates/crypto/src/: error.rs  key_store.rs  lib.rs  security.rs
apps/documentation/public/sources/kernel/crates/drivers/: Cargo.toml
apps/documentation/public/sources/kernel/crates/drivers/src/: browser.rs  lib.rs  os.rs  terminal.rs  ucp.rs
apps/documentation/public/sources/kernel/crates/execution/: Cargo.toml
apps/documentation/public/sources/kernel/crates/execution/src/: lib.rs  mv_memory.rs  scheduler.rs  util.rs
apps/documentation/public/sources/kernel/crates/http-rpc-gateway/: Cargo.toml  README.md
apps/documentation/public/sources/kernel/crates/http-rpc-gateway/src/: lib.rs
apps/documentation/public/sources/kernel/crates/ibc-host/: Cargo.toml
apps/documentation/public/sources/kernel/crates/ibc-host/src/: lib.rs
apps/documentation/public/sources/kernel/crates/ipc/: Cargo.toml  build.rs
apps/documentation/public/sources/kernel/crates/ipc/proto/: control.proto  public.proto
apps/documentation/public/sources/kernel/crates/ipc/src/: data.rs  lib.rs  security.rs  tests.rs
apps/documentation/public/sources/kernel/crates/networking/: Cargo.toml
apps/documentation/public/sources/kernel/crates/networking/src/: lib.rs  traits.rs
apps/documentation/public/sources/kernel/crates/node/: Cargo.toml  Dockerfile
apps/documentation/public/sources/kernel/crates/relayer/: Cargo.toml
apps/documentation/public/sources/kernel/crates/relayer/src/: gateway.rs  lib.rs
apps/documentation/public/sources/kernel/crates/scs/: Cargo.toml
apps/documentation/public/sources/kernel/crates/scs/src/: format.rs  index.rs  lib.rs  scrubber.rs  store.rs
apps/documentation/public/sources/kernel/crates/services/: Cargo.toml
apps/documentation/public/sources/kernel/crates/services/src/: lib.rs
apps/documentation/public/sources/kernel/crates/sp1-guests/: Cargo.toml
apps/documentation/public/sources/kernel/crates/sp1-guests/elf/: riscv32im-succinct-zkvm-elf-beacon_update
apps/documentation/public/sources/kernel/crates/sp1-guests/src/: beacon_update.rs  lib.rs  state_inclusion.rs
apps/documentation/public/sources/kernel/crates/state/: Cargo.toml
apps/documentation/public/sources/kernel/crates/state/src/: lib.rs
apps/documentation/public/sources/kernel/crates/storage/: Cargo.toml
apps/documentation/public/sources/kernel/crates/storage/src/: adapter.rs  lib.rs  redb_epoch_store.rs  wal.rs
apps/documentation/public/sources/kernel/crates/telemetry/: Cargo.toml
apps/documentation/public/sources/kernel/crates/telemetry/src/: http.rs  init.rs  lib.rs  prometheus.rs  sinks.rs  time.rs
apps/documentation/public/sources/kernel/crates/test_utils/: Cargo.toml
apps/documentation/public/sources/kernel/crates/test_utils/src/: agentic_mock.rs  lib.rs
apps/documentation/public/sources/kernel/crates/tx/: Cargo.toml
apps/documentation/public/sources/kernel/crates/tx/src/: lib.rs
apps/documentation/public/sources/kernel/crates/types/: Cargo.toml
apps/documentation/public/sources/kernel/crates/types/src/: codec.rs  lib.rs  prelude.rs
apps/documentation/public/sources/kernel/crates/types/wit/: ibc_verifier.wit  ioi.wit
apps/documentation/public/sources/kernel/crates/validator/: Cargo.toml
apps/documentation/public/sources/kernel/crates/validator/src/: config.rs  lib.rs
apps/documentation/public/sources/kernel/crates/vm/wasm/: Cargo.toml
apps/documentation/public/sources/kernel/crates/zk-driver-succinct/: Cargo.toml
apps/documentation/public/sources/kernel/crates/zk-driver-succinct/src/: config.rs  lib.rs  sp1_backend.rs
(+358 files in other folders)
