# Path: crates/api/Cargo.toml
[package]
name = "ioi-api"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Core traits and APIs for the IOI Kernel"
license.workspace = true
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-types = { path = "../types" }
# REVERTED: ioi-crypto = { path = "../crypto" }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
libp2p = { workspace = true }
dcrypt = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
hex = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "std"] }
zeroize = { workspace = true, features = ["alloc"] }
anyhow = { workspace = true }

# FIX: Add the missing dependency on ibc-primitives.
# This is required because TxContext now contains an ibc_primitives::Timestamp.
ibc-primitives = { workspace = true }

# [NEW] Dependencies for HTTP Inference Adapter
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
rand = { workspace = true }
futures-util = { workspace = true }
# [FIX] Allow tests to use the mock commitment helpers
ioi-test-utils = { path = "../test_utils" }

[features]
default = []
homomorphic = []
post-quantum = []
