# Path: crates/crypto/Cargo.toml
[package]
name = "ioi-crypto"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Cryptographic implementations for the IOI Kernel"
license.workspace = true
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
dcrypt = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
zeroize = { workspace = true, features = ["alloc"] }
rayon = "1.8"
libp2p = { workspace = true }                        # [FIX] Added missing dependency

[features]
default = []
