# Path: crates/drivers/Cargo.toml
[package]
name = "ioi-drivers"
version = "0.1.0"
edition = "2021"
description = "Native hardware drivers for IOI Agent Swarms (Eyes & Hands)"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
# Core IOI Dependencies
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-crypto = { path = "../crypto" }
ioi-scs = { path = "../scs" }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
dcrypt = { workspace = true }

# --- Phase 2: GUI Automation Stack ---

# Replacement for NutJS (Keyboard/Mouse Input)
enigo = "0.2.1"

# Replacement for Screenshot-desktop (Vision)
xcap = { version = "0.0.14", default-features = false }
image = "0.25"
image_hasher = "2.0"

# Replacement for DOM/Accessibility Parsing
accesskit = "0.16.0"

# OS Window Context
active-win-pos-rs = "0.8"

# Browser Control
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
futures = "0.3"

# [MODIFIED] Tokio needs process and io-util for MCP transport
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt"] }

wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3.3"