# Path: crates/execution/Cargo.toml
[package]
name = "ioi-execution"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Chain implementation components for the IOI Kernel"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-state = { path = "../state" }
ioi-tx = { path = "../tx" }
ioi-services = { path = "../services" }
ioi-consensus = { path = "../consensus", features = ["admft"] }
ioi-crypto = { path = "../crypto" }
log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
bs58 = "0.4"
base64 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
parity-scale-codec = { workspace = true, features = ["std"] }
toml = { workspace = true }
ibc-primitives = { workspace = true }

# [NEW] Dependencies for Parallel Execution
dashmap = { workspace = true }
rayon = "1.8"
crossbeam-utils = "0.8"
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
ioi-state = { path = "../state", features = ["state-iavl"] }
ioi-vm-wasm = { path = "../vm/wasm" }

[features]
default = []
