# Path: crates/http-rpc-gateway/Cargo.toml
[package]
name = "http-rpc-gateway"
version = "0.1.0"
edition = "2021"
description = "HTTP JSON-RPC gateway for the IOI Kernel's IBC host"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ibc-host = { path = "../ibc-host" }
ioi-state = { path = "../state" }

anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["limit", "trace", "catch-panic"] }
tracing = { workspace = true }
ipnetwork = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }

# IBC proof dependencies
ibc-core-commitment-types = { workspace = true, features = ["std"] }
ibc-proto = { workspace = true, features = ["serde", "std"] }
tendermint-proto = { workspace = true }
ics23 = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "std"] }

[dev-dependencies]
anyhow = { workspace = true }
ioi-state = { path = "../state", features = ["state-iavl"] }
ioi-types = { path = "../types" }
ioi-crypto = { path = "../crypto" }
ioi-api = { path = "../api" }
ibc-host = { path = "../ibc-host" }
ibc-proto = { workspace = true, features = ["serde"] }
ics23 = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "std"] }
hex = { workspace = true }
proptest = "1.2.0"
