# Path: crates/node/Cargo.toml

[package]
name = "ioi-node"
version = "0.1.0"
edition = "2021"
description = "The primary validator node binary for the IOI Kernel"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
# Workspace Library Crates
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-execution = { path = "../execution" }
ioi-state = { path = "../state", default-features = false }
ioi-consensus = { path = "../consensus", default-features = false }
ioi-storage = { path = "../storage" }
ioi-networking = { path = "../networking" }
ioi-tx = { path = "../tx" }
ioi-validator = { path = "../validator", default-features = false }
ioi-crypto = { path = "../crypto" }
ioi-vm-wasm = { path = "../vm/wasm", optional = true }
ioi-services = { path = "../services" }
ioi-test-utils = { path = "../test_utils" }
ioi-client = { path = "../client" }
ioi-telemetry = { path = "../telemetry" }
http-rpc-gateway = { path = "../http-rpc-gateway" }
ibc-host = { path = "../ibc-host" }
ioi-ipc = { path = "../ipc" }
zk-driver-succinct = { path = "../zk-driver-succinct", optional = true }
ioi-drivers = { path = "../drivers" }
ioi-scs = { path = "../scs" }

bincode = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = { workspace = true }
clap = { workspace = true, features = [
    "derive",
    "cargo",
    "env",
], optional = true }
cfg-if = "1.0"
env_logger = { workspace = true, optional = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true, features = [
    "ring",
] }
rcgen = { workspace = true }
serde_json = { workspace = true }
bs58 = "0.4"
async-trait = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_jcs = "0.1.0"
rand = { workspace = true }
dcrypt = { workspace = true }

base64 = { workspace = true }
parity-scale-codec = { workspace = true, features = ["std"] }
tonic = "0.11"
warp = "0.3"
libc = "0.2"
rpassword = "7.0"
atty = "0.2"
ahash = "0.8"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.3"

[features]
default = []

# This feature is for building the standard validator binaries.
validator-bins = [
    "dep:clap",
    "dep:env_logger",
    "ioi-consensus/admft", 
    "dep:ioi-vm-wasm",
    "ioi-validator/vm-wasm", # <--- ADD THIS LINE to propagate feature to lib
    "ioi-validator/validator-bins", # <--- Ensure base features are on
]

# This feature is for building the special malicious workload binary for testing.
malicious-bin = []

# State Tree features must propagate to BOTH commitment and validator crates
state-iavl = [
    "ioi-state/state-iavl",
    "ioi-validator/state-iavl",
    "commitment-hash",
]

state-verkle = [
    "ioi-state/state-verkle",
    "ioi-validator/state-verkle",
    "commitment-kzg",
]

state-jellyfish = [
    "ioi-state/state-jellyfish",
    "ioi-validator/state-jellyfish",
    "commitment-hash",
]
commitment-hash = ["ioi-state/commitment-hash", "ioi-validator/commitment-hash"]
commitment-kzg = ["ioi-state/commitment-kzg", "ioi-validator/commitment-kzg"]

# Consensus engine features
consensus-admft = ["ioi-validator/consensus-admft", "ioi-consensus/admft"]

# VM Features
# [FIX] Propagate vm-wasm to ioi-validator
vm-wasm = ["dep:ioi-vm-wasm", "ioi-validator/vm-wasm"]

# Service Features
ibc-deps = ["ioi-services/ibc-deps", "ioi-validator/ibc-deps"]

# Ethereum ZK Light Client Support
ethereum-zk = [
    "ioi-services/ethereum-zk",
    "dep:zk-driver-succinct",
    "ioi-validator/ethereum-zk",
]


[[bin]]
name = "orchestration"
path = "src/bin/orchestration.rs"
required-features = ["validator-bins"]

[[bin]]
name = "workload"
path = "src/bin/workload.rs"
required-features = ["validator-bins", "vm-wasm"]

[[bin]]
name = "guardian"
path = "src/bin/guardian.rs"
required-features = ["validator-bins"]

[[bin]]
name = "malicious-workload"
path = "src/bin/malicious-workload.rs"
required-features = ["malicious-bin", "validator-bins", "vm-wasm"]

[[bin]]
name = "ioi-signer"
path = "src/bin/signer.rs"
required-features = ["validator-bins"]

[[bin]]
name = "ioi-local"
path = "src/bin/ioi-local.rs"
required-features = [
    "validator-bins",
    "state-iavl",
    "consensus-admft",
]