# Path: crates/sp1-guests/Cargo.toml
[package]
name = "sp1-guests"
version = "0.1.0"
edition = "2021"

[workspace]
# This crate is a workspace member but manages its own dependencies for RISC-V compilation

[dependencies]
zk-types = { path = "../zk-types" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# SP1
sp1-zkvm = "1.1.0"

# Ethereum / Crypto
alloy-primitives = { version = "0.7", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-trie = { version = "0.4", default-features = false }
sha3 = { version = "0.10", default-features = false }            # Keccak256

# SSZ for Beacon Chain
ssz_rs = { version = "0.9", default-features = false }

[[bin]]
name = "beacon_update"
path = "src/beacon_update.rs"

[[bin]]
name = "state_inclusion"
path = "src/state_inclusion.rs"
