[package]
name = "ioi-state"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "State commitment trees and cryptographic primitives for the IOI Kernel"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-crypto = { path = "../crypto" }
ioi-storage = { path = "../storage" }
ahash = "0.8"
dcrypt = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
lazy_static = "1.4.0"
parity-scale-codec = { workspace = true, features = ["derive", "std"] }
prost = { workspace = true }
# [NEW] Parallel processing for JMT hashing
rayon = "1.8"
async-trait = { workspace = true }

[dev-dependencies]
proptest = "1.2.0"

[features]
default = []

# Primitives
commitment-hash = []
commitment-kzg = []
commitment-lattice = []
commitment-pedersen = ["ioi-api/homomorphic"]

# Trees (depend on primitives)
state-iavl = ["commitment-hash"]
state-sparse-merkle = ["commitment-hash"]
state-verkle = ["commitment-kzg"]
# [NEW] Jellyfish Merkle Tree feature
state-jellyfish = ["commitment-hash"]

# Debugging feature
strict_iavl = []
