# Path: crates/storage/Cargo.toml
[package]
name = "ioi-storage"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust persistent storage (redb + epoch sharding) for StateManager backends"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-api = { path = "../api" }
ioi-telemetry = { path = "../telemetry" }
ioi-types = { path = "../types" }
once_cell = { workspace = true }
redb = "1.4.1"
ahash = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# [NEW] Dependencies for WAL serialization and Async Backpressure
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
