# Path: crates/telemetry/Cargo.toml
[package]
name = "ioi-telemetry"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Observability, metrics, and structured logging for the IOI Kernel."
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
prometheus = { workspace = true, features = ["process"] }
once_cell = "1.19"
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["load-shed", "limit", "timeout"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-log = { workspace = true }
anyhow = { workspace = true }
