# Path: crates/tx/Cargo.toml
[package]
name = "ioi-tx"
version = "0.1.0"
edition = "2021"
description = "Transaction model implementations for the IOI Kernel"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-services = { path = "../services", default-features = false }
# REMOVED: ioi-consensus = { path = "../consensus" }
ioi-crypto = { path = "../crypto" }
ioi-telemetry = { path = "../telemetry" }
dcrypt = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
libp2p = { workspace = true }
bs58 = "0.4"
prost = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "std"] }
toml = { workspace = true }

[features]
default = []
# ibc-deps feature has been removed as the logic is now unified.
