# Path: crates/validator/Cargo.toml
[package]
name = "ioi-validator"
version = "0.1.0"
edition = "2021"
description = "Validator container implementations for the IOI Kernel"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-consensus = { path = "../consensus", default-features = false }
ioi-ipc = { path = "../ipc" }
ioi-networking = { path = "../networking" }
ioi-execution = { path = "../execution" }
ioi-tx = { path = "../tx" }
ioi-vm-wasm = { path = "../vm/wasm", optional = true }
ioi-crypto = { path = "../crypto" }
ioi-services = { path = "../services" }
ioi-client = { path = "../client" }
ioi-telemetry = { path = "../telemetry" }
ioi-storage = { path = "../storage" }
ioi-drivers = { path = "../drivers" }
ioi-scs = { path = "../scs" }

log = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_jcs = "0.1.0"
tokio = { workspace = true, features = ["full", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
env_logger = { workspace = true, optional = true }
ioi-state = { path = "../state" }
once_cell = { workspace = true }
rand = { workspace = true }
hex = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
bs58 = "0.4"
lru = { workspace = true }
bincode = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
parity-scale-codec = { workspace = true, features = ["std"] }
cfg-if = "1.0"
dashmap = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
dcrypt = { workspace = true }

# Parallel processing for signature verification
rayon = "1.8"
num_cpus = "1.0"

# Hybrid IPC Stack
tonic = { version = "0.11", features = ["tls", "transport"] }
prost = "0.12"
shared_memory = "0.12"
rkyv = { version = "0.7", features = ["validation"] }

# FIX: Add the missing dependency for TxContext's timestamp.
ibc-primitives = { workspace = true }

# Added for mTLS implementation
tokio-rustls = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
webpki-roots = { workspace = true }
# Added for RPC hardening and rate limiting
tower = { workspace = true }
tower-http = { workspace = true, features = ["limit", "trace", "catch-panic"] }
ipnetwork = "0.20"

zk-driver-succinct = { path = "../zk-driver-succinct", optional = true }

# [NEW] Dependencies for secure key loading
rpassword = "7.0"
atty = "0.2"

# [NEW] Dependencies for Sharded Mempool
ahash = "0.8"
parking_lot = "0.12"

# [NEW] Candle ML Framework (Optional)
candle-core = { version = "0.3.3", optional = true }
candle-nn = { version = "0.3.3", optional = true }
candle-transformers = { version = "0.3.3", optional = true }
tokenizers = { version = "0.15.2", optional = true }

[dev-dependencies]
tempfile = "3.3"

[features]
default = []

# [FIX] Explicitly enable the 'vm-wasm' feature here, not just the dependency.
validator-bins = [
    "dep:clap",
    "dep:env_logger",
    "ioi-consensus/admft",
    "vm-wasm",  # <--- CHANGED from "dep:ioi-vm-wasm" to "vm-wasm"
]

consensus-admft = ["ioi-consensus/admft"]

# This feature flag corresponds to the cfg(feature = "vm-wasm") check in the code
vm-wasm = ["dep:ioi-vm-wasm"]

# State Tree features must propagate to BOTH commitment and validator crates
state-iavl = ["ioi-state/state-iavl"]
state-sparse-merkle = ["ioi-state/state-sparse-merkle"]
state-verkle = ["ioi-state/state-verkle"]
state-jellyfish = ["ioi-state/state-jellyfish"]
commitment-hash = ["ioi-state/commitment-hash"]
commitment-kzg = ["ioi-state/commitment-kzg"]

ibc-deps = ["ioi-services/ibc-deps"]
ethereum-zk = ["ioi-services/ethereum-zk", "dep:zk-driver-succinct"]

real-ai = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]