# Path: crates/zk-driver-succinct/Cargo.toml
[package]
name = "zk-driver-succinct"
version = "0.1.0"
edition = "2021"
description = "ZkDriver implementation for Succinct Labs / SP1 proofs"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[features]
default = ["mock"]
# The current simulation behavior (hashing proof to check against public inputs)
mock = []
# Real SP1 verification (requires sp1-verifier)
native = ["dep:sp1-verifier"]

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
zk-types = { path = "../zk-types" }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
dcrypt = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }

# Optional dependencies for native SP1 verification
sp1-verifier = { version = "3.4.0", optional = true }
